Add Pages and Fragments and modality list page

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,7 +1,8 @@
 @MODULE_ID@.title=Radiology Module
 @MODULE_ID@.home.title=Radiology
 @MODULE_ID@.manageOrders=Manage Radiology Orders
-@MODULE_ID@.hello=Sun Hello Good
+@MODULE_ID@.initialize=Initialize Modality Study
+@MODULE_ID@.settings=Settings
 @MODULE_ID@.radiologyOrder=Radiology Order
 @MODULE_ID@.radiologyOrders=Radiology Orders
 @MODULE_ID@.addOrder=Add Radiology Order
